<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/color_primary"
              android:orientation="vertical"
              tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="16dp"
        android:text="cartora"
        android:textColor="@color/white_100p"
        android:textSize="32dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_email_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp">

                <EditText
                    android:id="@+id/login_email_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/login_email"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_pwd_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_email_input_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp">

                <EditText
                    android:id="@+id/login_pwd_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_pwd_confirm_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_pwd_input_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp">

                <EditText
                    android:id="@+id/login_pwd_confirm_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/login_confirm_password"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_sign_up_button"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/login_log_in_button"
                android:layout_marginBottom="16dp"
                android:layout_toStartOf="@+id/login_log_in_button"
                android:text="@string/login_sign_up"/>

            <Button
                android:id="@+id/login_log_in_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/login_pwd_confirm_input_layout"
                android:layout_below="@+id/login_pwd_confirm_input_layout"
                android:layout_marginTop="16dp"
                android:text="Log in"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
